test-data/apply-configuration/test-basic-call/expected-output/Configuration/Create/cluster-scoped-resources/config.openshift.io/ingresses/001-body-cluster.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: cluster
spec:
  domain: ""
  loadBalancer:
    platform:
      type: ""
status:
  defaultPlacement: ""
