test-data/apply-configuration/test-basic-call/expected-output/Configuration/Create/cluster-scoped-resources/config.openshift.io/ingresses/004-metadata-cluster.yaml
action: Create
controllerInstanceName: sample-operator-ingress-creator
generateName: ""
mame: cluster
resourceType:
  Group: config.openshift.io
  Resource: ingresses
  Version: v1
