test-data/apply-configuration/test-basic-call/expected-output/Configuration/Create/cluster-scoped-resources/config.openshift.io/ingresses/bb14-metadata-cluster.yaml
action: Create
controllerInstanceName: sample-operator-IngressCreator
generateName: ""
name: cluster
resourceType:
  Group: config.openshift.io
  Resource: ingresses
  Version: v1
